# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  pyproject.toml  sekvenssikaavio.md  tasks.py
scorekeeper/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
scorekeeper/data/: database.sqlite
scorekeeper/documentation/: LLM_use.md  architecture.md  changelog.md  manual.md  requirementspecification.md  testing.md  timelog.md
scorekeeper/dokumentaatio/: tyoaikakirjanpito.md
scorekeeper/src/: config.py  database_connection.py  index.py  index_old.py  initialize_database.py  pyproject.toml
scorekeeper/src/entities/: event.py  game.py  player.py  team.py
scorekeeper/src/repositories/: event_repository.py  game_repository.py  player_repository.py  team_repository.py
scorekeeper/src/services/: score_service.py
scorekeeper/src/tests/entities/: game_test.py  player_test.py  team_test.py
scorekeeper/src/tests/repositories/: player_repository_test.py
scorekeeper/src/tests/services/: scorekeeper_test.py
scorekeeper/src/ui/: game_view.py  player_view.py  scorekeeper_view.py  start_view.py  team_selection_view.py  ui.py
