[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Arttu Kankaanpää",email = "arttu.kankaanpaa@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "^7.7.1"
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
